# just-dna-lite

./: .dockerignore  .env.template  .gitignore  AGENTS.md  Containerfile  README.md  compose.yaml  flake.nix  modules.yaml  pyproject.toml
.ci/: verify_annotation.py
.github/workflows/: container.yml  nix.yml  release.yml  tests.yml
docs/: AI_MODULE_WALKTHROUGH.md  FAQ.md  GRAUNDE_AGNO_POST.md  IMMUTABLE_MODE.md  SCIENCE_LITERACY.md
docs/manuscript/: manuscript_draft_v2.md
docs/manuscript/benchmarks/: a1_benchmark_tables_prs.md  a2_annotation_speed_benchmark.md
just-dna-pipelines/: pyproject.toml
just-dna-pipelines/src/just_dna_pipelines/: module_config.py  module_registry.py
just-dna-pipelines/src/just_dna_pipelines/agents/: guardrails.py  module_creator.py
just-dna-pipelines/src/just_dna_pipelines/agents/prompts/: module_creator.yaml  pi.yaml  researcher.yaml  reviewer.yaml
just-dna-pipelines/src/just_dna_pipelines/annotation/: configs.py  definitions.py  report_assets.py  resources.py  vcf_export_assets.py  vcf_export_logic.py
just-dna-pipelines/tests/: conftest.py  test_dagster_config.py  test_hf_modules.py  test_module_compiler.py
macos/: Info.plist  build_app.sh  build_dmg.sh  entrypoint.sh  generate_icon.sh
src/just_dna_lite/: cli.py
webui/: pyproject.toml  rxconfig.py
webui/src/webui/: app.py  run.py  state.py
webui/src/webui/components/: layout.py
webui/src/webui/pages/: analysis.py  annotate.py  dashboard.py  faq.py  index.py  modules.py
windows/: generate_icon.py  installer.iss  just-dna-lite.bat
