[project]
name = "just-dna-lite"
version = "0.1.4"
description = "Just DNA Lite version to analyze your omics faster"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "typer>=0.24.1",
  "just-dna-pipelines",
  "webui",
  "pyyaml>=6.0.3",
  "dagster-dg-cli>=1.12.19",
  "google-genai>=1.67.0",
]

[tool.uv.sources]
just-dna-pipelines = { workspace = true }
webui = { workspace = true }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[project.scripts]
start = "just_dna_lite.cli:start_all"
ui = "webui.run:main"
dagster-ui = "just_dna_lite.cli:start_dagster"
pipelines = "just_dna_lite.cli:app"

[tool.uv.workspace]
members = ["just-dna-pipelines", "webui"]

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:eliottree.*",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
]
