[project]
name = "just-dna-pipelines"
version = "0.1.4"
description = "Genomic Database Management and Annotation Tool"
readme = "README.md"
authors = [
    { name = "antonkulaga", email = "antonkulaga@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "agno",
    "aiohttp>=3.13.5",
    "anthropic>=0.92.0",
    "dagster>=1.12.22",
    "dagster-duckdb>=0.28.22",
    "dagster-webserver>=1.12.22",
    "eliot>=1.17.5",
    "fsspec>=2026.2.0",
    "google-genai>=1.71.0",
    "huggingface-hub>=1.10.0",
    "mcp>=1.27.0",
    "numpy>=2.4.3",
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "polars-bio>=0.27.1",
    "pooch>=1.9.0",
    "psutil>=7.2.2",
    "pycomfort>=0.0.18",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.scripts]
pipelines = "just_dna_pipelines.cli:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyterlab>=4.5.6",
    "marimo>=0.23.0",
    "pytest>=9.0.3",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.9",
    "sqlglot>=30.4.2",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests that require network access",
    "slow: marks tests that take a long time to run",
    "download: marks tests that perform downloads",
    "large_download: marks tests that download large files (multi-GB)",
]

# Default pytest behavior: extra verbose and no capture to allow Eliot/stdout output
addopts = "-vvv -s -m 'not large_download'"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:eliottree.*",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
]


[tool.marimo.runtime]
dotenv = [".env"]
