[project]
name = "webui"
version = "0.1.4"
description = "Reflex Web UI for just-dna-lite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex>=0.8.28",
  "just-dna-pipelines",
  "granian>=2.7.2",
  "fastapi>=0.135.1",
  "prs-ui>=0.2.3"
]

[tool.uv.sources]
# Use the workspace-local just-dna-pipelines package as a dependency.
just-dna-pipelines = { workspace = true }
#prs-ui = { path = "/data/sources/just-prs/prs-ui", editable = true }
#just-prs = { path = "/data/sources/just-prs/just-prs", editable = true }

[project.scripts]
run = "webui.run:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.15.6",
]
